Date	Added
11/17   
	* Fixed a crash in the afm reading/closing code [MouseJstr]
	* Added skill_steal_type to battle_athena.conf for the new (but unconfirmed) 
          stealing formula [celest]
        * Skill updates: [celest]
          - Removed annoying skill fail messages from rogue's Snatcher
          - Add sc_data check for firewall and fogwall
          - Fixed Berserk (99% hopefully? ^_^)

11/16
	* Fix for compiling against gcc 2.95 [MouseJstr]
	* Added day of week events (OnSat2000) into scripting engine [MouseJstr]
	* Temporarily Disabled GM Command Logs; Weren't working Properly >_<! [Codemaster]
	* Fixed a typo in ../db/Changelog.txt [Nana]
	* Added -funroll-loops argument to makefile to further increase performance [Shinigami]
	* Fixed 2 bugs in DELITEM script command. [Lupus]
	  - added deleting priority: If you have some items with the same ID and want to delete some of them, then
	    at first it'll delete common items then, if necessary, delete the rest items but upgraded/named/with cards. [Lupus]
        * Added checks for Perfect hiding [celest]
        * Modified level 0 skill check to allow auto blitz beat and steal. [celest]
        * Added constant BaseJob. [celest] Usage: For example, instead of
             If (Class==12) || (Class==4012) || (Class==4035)
          you can use
             If (BaseJob==12) or If (BaseJob==Job_Assassin)
        * Added 'indoors' mapflag : When in-doors players will not be affected by Night [celest]
        * Skill updates [celest]
          - Assumptio is now disabled in GvG maps.
          - Changed cloaking checks a bit.
          - Tidied up some parts of skill.c abit. ;P
        * Added pk_min_level option in battle_athena.conf. Change this to define the
          minimum level players can attack others when pk_mode is on. [celest]

11/15
	* Added a Database Changelog.txt File, use it for any changes inside the db folder. [shadowlady]