@@ -319,6 +319,7 @@ npc: npc/other/blackjack.txt
 
 // Dev NPCs
 npc: npc/other/devnpc.txt
+npc: npc/other/poetry/ayothaya.txt
 
 //= MC Cameri's Bank NPC
 //npc: npc/other/mc_cameri/bank.txt
