@@ -1902,6 +1902,16 @@ int parse_frommap(int fd) {
 			RFIFOSKIP(fd,6);
 			break;
 
+		case 0x3090:
+			{
+				int r = inter_parse_frommap(fd);
+				if (r == 1) break;		// processed
+				if (r == 2) return 0;	// need more packet
+			}
+
+			printf("parse_frommap: unsupported packet %x! \n", RFIFOW(fd,0));
+			break;
+
 		default:
 			// inter server - packet
 			{
